--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": {
-    "opencode-multi-auth": "./dist/cli.js"
+    "opencode-multi-auth-codex": "./dist/cli.js"
   },
   "scripts": {
     "build": "tsc",
