fix: support HTTPS proxy in headless OAuth flow
Route device authorization and token/userinfo requests through proxy settings (HTTPS_PROXY/HTTP_PROXY/ALL_PROXY/NO_PROXY) to match OpenCode behavior and avoid region-block 403 responses when proxy is configured.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "opencode-multi-auth-codex",
-  "version": "1.0.18",
+  "version": "1.0.19",
   "description": "Multi-account OAuth rotation for OpenAI Codex with auto model discovery",
   "type": "module",
   "main": "./dist/index.js",
@@ -14,7 +14,8 @@
     "web": "node ./dist/cli.js web --port 3434 --host 127.0.0.1"
   },
   "dependencies": {
-    "@openauthjs/openauth": "^0.4.3"
+    "@openauthjs/openauth": "^0.4.3",
+    "undici": "^7.16.0"
   },
   "peerDependencies": {
     "@opencode-ai/plugin": "^1.0.150"
